updated the remaining controller url
update security config accordingly